--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.13",
     "@mantine/core": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
     "@tabler/icons-react": "^3.29.0",
+    "ai": "^4.1.45",
     "jotai": "^2.11.3",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
