--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.13",
+    "@aws-amplify/ui-react": "^6.9.1",
     "@mantine/core": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
     "@tabler/icons-react": "^3.29.0",
